# BevyGame

./: Cargo.toml  README.md  maximum_gain.py  rust-toolchain.toml  rustfmt.toml
.claude/: settings.json
assets/cutscenes/: intro.cutscene.ron
assets/data/: areas.ron  creatures.ron  decision_tree.ron  dialogue_reputation.ron  economy.ron  items.ron  quests.ron
assets/data/abilities/: AbilitiesExample.ron
assets/data/characters/: Toshiko_base.ron  Toshiko_current.ron
assets/data/dialogues/: interactable_demo.ron  river_road.ron  seirei_intro.ron  slice_hunt.ron  slice_merchant_intro.ron  slice_merchant_resurrection.ron  slice_village_elder.ron  the_last_goodbye.ron
assets/data/skills/: bound.ron  chiseijutsu.ron  houjou_samurai.ron  iwao_bulwark.ron  kamishin.ron  kanzo_exorcist.ron  kiho.ron  magatsu_necromancer.ron  martial.ron  midori_wildkeeper.ron  onmyodo.ron  renjiro_monk.ron  rina_rogue.ron  sayaka_cleric.ron  survival.ron  suzuka_onmyoji.ron  toshiko_vessel.ron  yokaijutsu.ron  yuna_bikuni.ron
assets/data/world_rules/: example.ron  slice.ron
assets/shaders/: light_plugin.wgsl  post_fx.wgsl  toon.wgsl
dialogues/: example.json  example.ron
saves/: auto.json  auto.ron  settings.ron
scripts/: gen_ability_catalog.py  gen_skill_catalog.py  serve_editors.sh
shaders/: light_plugin.glsl  light_plugin.wgsl
src/: activities.rs  ai_decision.rs  areas.rs  battle.rs  character_sheet.rs  characters.rs  city_data.rs  combat.rs  combat_ability.rs  combat_hud.rs  combat_overlay.rs  combat_plugin.rs  combat_plugin_experimental.rs  combat_plugin_old.rs  constants.rs  contract.rs  core.rs  creatures.rs  cutscene.rs  debug_console.rs  dialogue.rs  economy.rs  effects.rs  equipment.rs  gogyo.rs  governance.rs  hud.rs  kegare.rs  lib.rs  light_plugin.rs  main.rs  main_old_1.rs  map.rs  menu.rs  money.rs  movement.rs  party_select.rs  pathfinding.rs  perf_overlay.rs  post_fx.rs  (+16 more)
src/abilities/: AbilitiesExample.json  AbilitiesExample.ron
src/characters/: Toshiko_base.ron  Toshiko_current.json
src/dialogue/: loader.rs  mod.rs  runtime.rs  scene_player.rs  schema.rs  stage.rs  ui.rs
src/enemies/: base_decision_tree.json
src/old/: combat_plugin_experimental.rs  combat_plugin_old.rs  combat_plugin_old2.rs
tests/: summon_integration.rs
tools/editors/: app.js  index.html  styles.css
