[package]
name = "SeireiKuniBevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
once_cell = "1.21.3"
svg = "0.18.0"
approx = "0.5.1"

[profile.dev]
opt-level = 1  # Lower optimization for faster development builds
lto = false
incremental = true

[profile.release]
opt-level = 3  # Higher optimization for release builds
lto = true
incremental = true

[profile.bench]
opt-level = 3  # Higher optimization for benchmarking
lto = true
incremental = true