[package]
name = "SeireiKuniBevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17.3", features = ["dynamic_linking", "bevy_ui"] }
bevy_egui = "0.38.0"
once_cell = "1.21.3"
svg = "0.18.0"
approx = "0.5.1"
serde = "1.0.219"
serde_json = "1.0.145"
bitflags = "2.10.0"
noise = "0.9.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
rand = "0.9.2"
petgraph = "0.8.3"

[profile.dev]
opt-level = 1  # Lower optimization for faster development builds
lto = false
incremental = true

[profile.release]
opt-level = 3  # Higher optimization for release builds
lto = true
incremental = true

[profile.bench]
opt-level = 3  # Higher optimization for benchmarking
lto = true
incremental = true