[package]
name = "SeireiKuniBevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18", features = ["dynamic_linking", "bevy_ui"] }
bevy_camera = "0.18"
bevy_sprite_render = "0.18"
bevy_egui = "0.39"
once_cell = "1.21.3"
svg = "0.18.0"
approx = "0.5.1"
serde = "1.0.219"
serde_json = "1.0.145"
ron = "0.8"
tiny_http = "0.12"
bitflags = "2.10.0"
noise = "0.9.0"
bytemuck = { version = "1.24.0", features = ["derive"] }
rand = "0.9.2"
petgraph = "0.8.3"
bevy_mod_outline = "0.12"
bevy_skein = "0.5"
bevy_common_assets = { version = "0.16", features = ["ron"] }

[profile.dev]
opt-level = 1  # Lower optimization for faster development builds
lto = false
incremental = true

# Optimize *dependencies* (Bevy, wgpu, etc.) even in dev builds. Your own crate
# stays at opt-level 1 for fast incremental rebuilds, but the engine — which
# dominates runtime cost — runs at full speed. Single biggest win for dev-build
# runtime FPS; only recompiled when dependencies themselves change.
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3        # Higher optimization for release builds
lto = "fat"          # Cross-crate inlining for max runtime speed
codegen-units = 1    # Trade compile time for a faster final binary
strip = true         # Drop debug symbols → smaller, faster-loading binary
incremental = false  # Single-codegen-unit LTO can't use incremental anyway

[profile.bench]
opt-level = 3  # Higher optimization for benchmarking
lto = true
incremental = true
